# Steel

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
docs/: README.md  (+2 more)
steelc/: CMakeLists.txt  changelog-old.md  changelog.md  commands.md  internal-changelog.md
steelc/demo/: ArrayDemo.stproj  Main.s  Main.st  TestProj.stproj  demo.stproj  io.st  io2.st  math.s  test.s
steelc/demo/bounce/: BounceDemo.stproj  Main.s  Player.s  Vector2.s
steelc/demo/donut/: Donut.stproj  Main.s
steelc/demo/std/: stdio.s  stdlib.stproj
steelc/demo/teststl/: io.sm
steelc/src/: CMakeLists.txt  compiler.cpp  compiler.h  main.cpp  steelc_definitions.h
steelc/src/ast/: ast.h  ast_fwd.h  ast_node.h  ast_visitor.cpp  ast_visitor.h  compilation_unit.h
steelc/src/ast/declarations/: conversion_declaration.h  declaration.h  enum_declaration.h  function_declaration.h  module_declaration.h  operator_declaration.h  type_declaration.h  variable_declaration.h
steelc/src/ast/enums/: enum_option.h
steelc/src/ast/expressions/: address_of_expression.h  assignment_expression.h  binary_expression.h  cast_expression.h  deref_expression.h  expression.h  expression_statement.h  function_call.h  identifier_expression.h  index_expression.h  initializer_list.h  literal.h  member_expression.h  this_expression.h  unary_expression.h
steelc/src/ast/generics/: generic_parameter.h
steelc/src/ast/statements/: code_block.h  import_statement.h  inline_if.h
steelc/src/ast_lowering/: mir_lowerer.cpp  mir_lowerer.h  mir_lowering_visitor.cpp  mir_lowering_visitor.h
steelc/src/ast_passes/: compile_time_computator.cpp  compile_time_computator.h  declaration_collector.cpp  declaration_collector.h  flow_analyzer.cpp  flow_analyzer.h  generic_substitutor.cpp  generic_substitutor.h  import_resolver.cpp  import_resolver.h  init_checker.cpp  init_checker.h  name_resolver.cpp  name_resolver.h  type_checker.cpp  type_checker.h  type_resolver.cpp  type_resolver.h
steelc/src/ast_passes/classes/: computed_value.cpp  computed_value.h
steelc/src/ast_passes/helpers/: function_filter.cpp  function_filter.h
steelc/src/ast_passes/util/: entity_refresher.cpp  entity_refresher.h
steelc/src/building/: build_config.h  code_outputter.cpp  code_outputter.h  project_builder.cpp  project_builder.h
steelc/src/building/cache/: artifact_metadata.h  build_cache_file.cpp  build_cache_file.h  file_hasher.cpp  file_hasher.h  file_metadata.h  source_metadata.h  vars_file.cpp  vars_file.h
steelc/src/building/ir/: ir_generator.cpp  ir_generator.h
steelc/src/building/linking/: link_error.h  project_linker.cpp  project_linker.h
steelc/src/codegen/: README.md  code_artifact.h  codegen.cpp  codegen.h  codegen_config.h  codegen_env.cpp  codegen_env.h  codegen_info.h  codegen_result.h  codegen_visitor.cpp  codegen_visitor.h  icode_generator.h
steelc/src/codegen/builders/: llvm_expression_builder.cpp  llvm_expression_builder.h  llvm_function_builder.cpp  llvm_function_builder.h
steelc/src/codegen/cleanup/: cleanup_action.cpp  cleanup_action.h  scope.h
steelc/src/codegen/computation/: compile_time_computator.h  compile_time_computator_visitor.h
steelc/src/codegen/constants/: codegen_constants.h
steelc/src/codegen/error/: codegen_exception.h
steelc/src/codegen/ir/: ir_holder.h  llvm_ir_holder.h
steelc/src/codegen/memory/: lvalue.cpp  lvalue.h  variable.h
steelc/src/codegen/modules/: module_holder.h
steelc/src/codegen/naming/: name_mangler.cpp  name_mangler.h
steelc/src/codegen/sys/: system_formats.cpp  system_formats.h
steelc/src/codegen/type_handling/: llvm_type_converter.cpp  llvm_type_converter.h  llvm_type_utils.h
steelc/src/codegen_llvm/: codegen_env.cpp  llvm_code_generator.cpp  llvm_code_generator.h
steelc/src/compiler/: compilation_ctx.h  compilation_pass.cpp  compilation_pass.h  compile_config.h  compiler.cpp  compiler.h  instantiation_worklist.h
steelc/src/config/: bad_arg_exception.h  compile_config.cpp  compile_config.h  console_args.cpp  console_args.h
steelc/src/error/: advice.h  error.h  error_catalog.h  error_printer.cpp  error_printer.h
steelc/src/input/: console_args.cpp  console_args.h
steelc/src/interpreter/: interpreter.cpp  interpreter.h  interpreter_visitor.cpp  interpreter_visitor.h
steelc/src/lexer/: lexer.cpp  lexer.h  token.h  token_type.h  token_utils.cpp  token_utils.h
steelc/src/linking/: icode_linker.h  link_config.h  link_data.h  link_options.h  link_result.h  linker.cpp  linker.h
steelc/src/linking_llvm/: llvm_code_linker.cpp  llvm_code_linker.h
steelc/src/mir/: mir_block.h  mir_function.h  mir_fwd.h  mir_instr.h  mir_module.h  mir_operand.h  mir_type.h  mir_value.h
steelc/src/modules/: module_info.h  module_manager.cpp  module_manager.h
steelc/src/output/: code_outputter.cpp  code_outputter.h  log_file.cpp  log_file.h  output.cpp  output.h  output_config.h
steelc/src/parser/: compilation_pass.cpp  compilation_pass.h  parser.cpp  parser.h  parser_utils.cpp  parser_utils.h
steelc/src/steelc/: language_constants.h  platform_constants.h  steelc_definitions.h
steelc/src/stproj/: bad_stproj_exception.h  source_file.cpp  source_file.h  stproj_file.cpp  stproj_file.h  stproj_generator.cpp  stproj_generator.h
steelc/src/symbolics/: import_table.h  lookup_result.cpp  lookup_result.h  overlay_table.cpp  overlay_table.h  symbol_error.h  symbol_resolver.cpp  symbol_resolver.h  symbol_table.cpp  symbol_table.h  type_symbols.cpp  type_symbols.h
steelc/src/sys/: host_defs.h  platform.cpp  platform.h  shell.cpp  target_triple.cpp  target_triple.h
steelc/src/utils/: command_builder.cpp  command_builder.h  console_colors.cpp  console_colors.h  iclonable.h  language_constants.h  maybe.h  path_utils.cpp  path_utils.h  shell.cpp  shell.h  string_utils.cpp  string_utils.h
steelc/tests/: CMakeLists.txt  test.h  tests_main.cpp
steelc/tests/harness/: test.h  test_defs.h  test_manager.cpp  test_manager.h
steelc/tests/language tests/: language tests.stproj
steelc/tests/language_tests/: language_tests.stproj
steelc/tests/lexer_tests/: lexer_tests.cpp
(+226 files in other folders)
