# steelc

set(SOURCES
    "src/main.cpp"
    "src/compiler.cpp"
    "src/compiler.h"
    "src/input/console_args.cpp"
    "src/input/console_args.h"
    "src/stproj/source_file.cpp"
    "src/stproj/source_file.h"
    "src/interpreter/interpreter.cpp"
    "src/interpreter/interpreter.h"
    "src/interpreter/interpreter_visitor.cpp"
    "src/interpreter/interpreter_visitor.h"
    "src/lexer/lexer.cpp"
    "src/lexer/lexer.h"
    "src/lexer/token_utils.cpp"
    "src/lexer/token_utils.h"
    "src/parser/ast/ast_visitor.cpp"
    "src/parser/ast/ast_visitor.h"
    "src/parser/modules/module_manager.cpp"
    "src/parser/modules/module_manager.h"
    "src/parser/parser.cpp"
    "src/parser/parser.h"
    "src/parser/parser_utils.cpp"
    "src/parser/parser_utils.h"
    "src/parser/semantics/declaration_collector.cpp"
    "src/parser/semantics/declaration_collector.h"
    "src/parser/semantics/flow_analyzer.cpp"
    "src/parser/semantics/flow_analyzer.h"
    "src/parser/semantics/import_resolver.cpp"
    "src/parser/semantics/import_resolver.h"
    "src/parser/semantics/init_checker.cpp"
    "src/parser/semantics/init_checker.h"
    "src/parser/semantics/name_resolver.cpp"
    "src/parser/semantics/name_resolver.h"
    "src/parser/semantics/type_checker.cpp"
    "src/parser/semantics/type_checker.h"
    "src/parser/semantics/type_resolver.cpp"
    "src/parser/semantics/type_resolver.h"
    "src/parser/symbolics/import_table.cpp"
    "src/parser/symbolics/import_table.h"
    "src/parser/symbolics/symbol_resolver.cpp"
    "src/parser/symbolics/symbol_resolver.h"
    "src/parser/symbolics/symbol_table.cpp"
    "src/parser/symbolics/symbol_table.h"
    "src/parser/types/container_types.cpp"
    "src/parser/types/container_types.h"
    "src/parser/types/data_type.cpp"
    "src/parser/types/data_type.h"
    "src/parser/types/custom_type.cpp"
    "src/parser/types/custom_type.h"
    "src/parser/types/enum_type.cpp"
    "src/parser/types/enum_type.h"
    "src/parser/types/core.cpp"
    "src/parser/types/core.h"
    "src/parser/types/type_utils.cpp"
    "src/parser/types/type_utils.h"
    "src/stproj/stproj_file.cpp"
    "src/stproj/stproj_file.h"
    "src/parser/compilation_pass.cpp"
    "src/parser/semantics/generic_substitutor.h"
    "src/parser/semantics/generic_substitutor.cpp"
    "src/interpreter/classes/break_out.h"
    "src/interpreter/debugging/interpreter_debugger.h"
    "src/interpreter/debugging/debug_console.h"
    "src/interpreter/debugging/debug_console.cpp"
    "src/codegen/codegen.cpp"
    "src/codegen/codegen_visitor.cpp"
    "src/codegen/type_handling/llvm_type_converter.h"
    "src/codegen/ir/ir_holder.h"
    "src/codegen/type_handling/llvm_type_converter.cpp"
    "src/codegen/codegen_env.cpp"
    "src/codegen/cleanup/cleanup_action.h"
    "src/codegen/cleanup/scope.h"
    "src/codegen/cleanup/cleanup_action.cpp"
    "src/codegen/type_handling/llvm_type_utils.h"
    "src/codegen/type_handling/llvm_type_utils.cpp"
    "src/codegen/builders/llvm_function_builder.h"
    "src/codegen/builders/llvm_function_builder.cpp"
    "src/codegen/error/codegen_exception.h" 
    "src/codegen/constants/codegen_constants.h"
    "src/codegen/builders/llvm_expression_builder.h"
    "src/codegen/builders/llvm_expression_builder.cpp"
    "src/codegen/memory/lvalue.h"
    "src/codegen/memory/lvalue.cpp"
    "src/codegen/naming/name_mangler.h"
    "src/codegen/naming/name_mangler.cpp"
    "src/codegen/memory/variable.h"
    "src/utils/console_colors.h"
    "src/utils/console_colors.cpp"
    "src/utils/iclonable.h"
    "src/error/error_printer.h"
    "src/error/error_printer.cpp"
    "src/building/code_outputter.h"
    
    "src/building/code_outputter.cpp"
    "src/config/compile_config.cpp"
    "src/config/bad_arg_exception.h"
    "src/utils/maybe.h"
    "src/building/project_builder.h"
    "src/building/project_builder.cpp"
    "src/output/output.h"
    "src/output/output.cpp"
    "src/output/log_file.h"
    "src/output/log_file.cpp"
    "src/utils/string_utils.h"
    "src/utils/string_utils.cpp"
    "src/stproj/bad_stproj_exception.h"
    "src/codegen/computation/compile_time_computator.h"
    "src/codegen/computation/compile_time_computator_visitor.h"
    "src/input/commands/steelc_command_manager.h"
    "src/input/commands/steelc_command.h"
    "src/input/commands/steelc_command_manager.cpp"
    "src/input/commands/steelc_commands_impl.h"
    "src/input/commands/steelc_commands_impl.cpp"
    "src/steelc_definitions.h"
    "src/stproj/stproj_generator.h"
    "src/stproj/stproj_generator.cpp"
    "src/input/commands/steelc_command.cpp"
 "src/input/commands/flags/flag_config.h"  "src/input/commands/flags/command_flags.h" "src/input/commands/steelc_command_id.h" "src/input/commands/flags/flag_config.cpp" "src/building/cache/build_cache_file.h" "src/building/cache/build_cache_file.cpp" "src/building/cache/file_metadata.h" "src/building/cache/file_hasher.h" "src/building/cache/file_hasher.cpp" "src/building/build_config.h" "src/utils/path_utils.h" "src/utils/path_utils.cpp")

# Add source to this project's executable.
add_executable ( steelc ${SOURCES} )

# LLVM
find_package(LLVM REQUIRED CONFIG)
include_directories(${LLVM_INCLUDE_DIRS})
add_definitions(${LLVM_DEFINITIONS})
llvm_map_components_to_libnames(LLVM_LIBS
    core
    support
    irreader
)
target_link_libraries(steelc PRIVATE ${LLVM_LIBS})

# Support for includes in /lib/
target_include_directories(steelc PRIVATE lib)

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET steelc PROPERTY CXX_STANDARD 20)
endif()
